--- a/package.json
+++ b/package.json
@@ -196,7 +196,10 @@
     "@types/jest": "^26.0.3",
     "@types/node": "12",
     "@types/react": "^16.9.38",
+    "@types/react-color": "^3.0.4",
     "@types/react-dom": "^16.9.8",
+    "@types/react-outside-click-handler": "^1.3.0",
+    "@types/react-portal": "^4.0.2",
     "@types/react-redux": "^7.1.9",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.5",
@@ -242,8 +245,8 @@
     "eslint-plugin-testcafe": "^0.2.1",
     "file-loader": "^6.0.0",
     "husky": "^4.2.5",
-    "jest": "^26.1.0",
     "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.1.0",
     "lint-staged": "^10.2.11",
     "mini-css-extract-plugin": "^0.9.0",
     "opencollective-postinstall": "^2.0.3",
@@ -273,20 +276,32 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.1",
     "@hot-loader/react-dom": "^16.13.0",
+    "@material-ui/core": "^4.11.0",
     "@reduxjs/toolkit": "^1.4.0",
+    "color-convert": "^2.0.1",
+    "colr": "^1.2.2",
     "connected-react-router": "^6.6.1",
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.2",
     "electron-updater": "^4.3.1",
     "history": "4.7.2",
+    "image-palette": "^2.1.0",
+    "image-pixels": "^2.2.2",
+    "jimp": "^0.14.0",
     "react": "^16.13.1",
-    "react-dom": "^16.12.0",
+    "react-color": "^2.18.1",
+    "react-dom": "^16.13.1",
+    "react-dropzone": "^11.0.1",
     "react-hot-loader": "^4.12.21",
+    "react-outside-click-handler": "^1.3.0",
+    "react-portal": "^4.2.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "source-map-support": "^0.5.19"
+    "serialize-javascript": "^4.0.0",
+    "source-map-support": "^0.5.19",
+    "styled-components": "^5.1.1"
   },
   "devEngines": {
     "node": ">=7.x",
