--- a/package.json
+++ b/package.json
@@ -288,6 +288,7 @@
     "image-palette": "^2.1.0",
     "image-pixels": "^2.2.2",
     "jimp": "^0.14.0",
+    "lodash": "^4.17.19",
     "react": "^16.13.1",
     "react-color": "^2.18.1",
     "react-dom": "^16.13.1",
@@ -297,6 +298,7 @@
     "react-portal": "^4.2.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
+    "react-use": "^15.3.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "serialize-javascript": "^4.0.0",
